fixing background color so logos and such don't bleed through

--- a/src/main/webapp/snippet-style.css
+++ b/src/main/webapp/snippet-style.css
@@ -8,8 +8,10 @@
 	margin-bottom: 10px;
 }
 
-#code-snippets #file-content pre {
+#code-snippets #file-content>pre {
+	background-color: white;
 	padding: 10px;
+	padding-left: 0px;
 	margin-top: 5px;
 	width: 80%;
 }
